[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "h2pcontrol"
version = "1.21"
description = "Project initialized by h2pcontrol cli"
authors = [
  { name = "Tijmen Hilgenkamp", email = "t.j.hilgenkamp@student.vu.nl" },
]
requires-python = ">=3.11"
dependencies = [
  "betterproto2==0.4.0",
  "build>=1.2.2.post1",
  "grpcio>=1.72.1",
  "grpclib>=0.4.8",
  "influxdb-client>=1.49.0",
]


# [tool.setuptools]
# packages = ["h2pcontrol", "h2pcontrol.pb"]
